Feat: API versionng and Docs Update
